[gd_scene load_steps=10 format=3 uid="uid://dbe6gyo1e3eet"]

[ext_resource type="Script" path="res://project/3-3D_creeps/scripts/main.gd" id="1_hcunu"]
[ext_resource type="PackedScene" uid="uid://dt8xlenp3rqwf" path="res://project/3-3D_creeps/player.tscn" id="1_u61sq"]
[ext_resource type="PackedScene" uid="uid://dw4vte2lsx70b" path="res://project/3-3D_creeps/mob.tscn" id="2_khc7j"]

[sub_resource type="Environment" id="Environment_8lqyj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_501va"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_k2xyn"]
size = Vector3(60, 2, 60)

[sub_resource type="Curve3D" id="Curve3D_70no0"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -24, 0, -18, 0, 0, 0, 0, 0, 0, 12, 0, -18, 0, 0, 0, 0, 0, 0, 12, 0, 10, 0, 0, 0, 0, 0, 0, -24, 0, 10, 0, 0, 0, 0, 0, 0, -24, 0, -18, 0, 0, 0, 0, 0, 0, 14.5547, -14.0258, -25.4447),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tymq4"]
albedo_color = Color(0.972549, 0.482353, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_vemfd"]
material = SubResource("StandardMaterial3D_tymq4")

[node name="Main" type="Node"]
script = ExtResource("1_hcunu")
mob_scene = ExtResource("2_khc7j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8lqyj")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_501va")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_k2xyn")

[node name="Player" parent="." instance=ExtResource("1_u61sq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54251, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
shadow_enabled = true

[node name="SpawnPath3D" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1.26328, 5)
curve = SubResource("Curve3D_70no0")
metadata/_edit_group_ = true

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath3D"]
transform = Transform3D(-4.37113e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37113e-08, -24, 0, -18)

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 2, -13)
mesh = SubResource("CylinderMesh_vemfd")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 2, -13)
mesh = SubResource("CylinderMesh_vemfd")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 2, 15)
mesh = SubResource("CylinderMesh_vemfd")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 2, 15)
mesh = SubResource("CylinderMesh_vemfd")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
